{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 24,
  "lineage": "cda0dd98-f8f2-2cbb-38b1-e7ea784c3a65",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:548932260222:security-group/sg-0d7f59c060db320ee",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7f59c060db320ee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "38.253.148.253/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins-sg-dev",
            "name_prefix": "",
            "owner_id": "548932260222",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05d82fff05cc3e242"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "548932260222",
            "id": "sg-0d7f59c060db320ee",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "odoo_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:548932260222:security-group/sg-08a44767bd4a12e00",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a44767bd4a12e00",
            "ingress": [
              {
                "cidr_blocks": [
                  "38.253.148.253/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "38.253.148.253/32"
                ],
                "description": "",
                "from_port": 8069,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8069
              }
            ],
            "name": "odoo-sg-dev",
            "name_prefix": "",
            "owner_id": "548932260222",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05d82fff05cc3e242"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "548932260222",
            "id": "sg-08a44767bd4a12e00",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "module": "module.clients[\"cliente1\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-015ae009235dd821e",
            "arn": "arn:aws:ec2:us-east-2:548932260222:instance/i-02cc75552fd4fd2d4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02cc75552fd4fd2d4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "odoo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0896d29f8bfa306e2"
              }
            ],
            "primary_network_interface_id": "eni-0896d29f8bfa306e2",
            "private_dns": "ip-172-31-47-250.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.47.250",
            "public_dns": "ec2-3-142-219-110.us-east-2.compute.amazonaws.com",
            "public_ip": "3.142.219.110",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02fc2422544860603",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "odoo-sg-dev"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-044cc89a754c6d43a",
            "tags": {
              "Name": "odoo-cliente1-dev"
            },
            "tags_all": {
              "Name": "odoo-cliente1-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08a44767bd4a12e00"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "548932260222",
            "id": "i-02cc75552fd4fd2d4",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.odoo_sg",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-015ae009235dd821e",
            "arn": "arn:aws:ec2:us-east-2:548932260222:instance/i-0637e875eb550c59a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0637e875eb550c59a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "odoo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e61308ab2fb12a7b"
              }
            ],
            "primary_network_interface_id": "eni-0e61308ab2fb12a7b",
            "private_dns": "ip-172-31-42-67.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.42.67",
            "public_dns": "ec2-3-144-24-45.us-east-2.compute.amazonaws.com",
            "public_ip": "3.144.24.45",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08abda987457eb602",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "jenkins-sg-dev"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-044cc89a754c6d43a",
            "tags": {
              "Name": "jenkins-dev"
            },
            "tags_all": {
              "Name": "jenkins-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d7f59c060db320ee"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "548932260222",
            "id": "i-0637e875eb550c59a",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.jenkins_sg",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    }
  ]
}